--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@itseasy21/react-elastic-carousel": "^0.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.13.0",
     "react-slick": "^0.29.0",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
